--- a/Mod-2-main/index.html
+++ b/Mod-2-main/index.html
@@ -10,11 +10,11 @@
 <body>
 <h1>Our Menu</h1>
 <div class=.row> 
-	<div id="box1" class="col-lg-4 col-md-6 col-sm-12"> This is by far the freshest, most delcious sushi on the planet, buy it now!<p id=p1> Sushi </p> </div>
+	<div id="box1" > This is by far the freshest, most delicious sushi on the planet, buy it now!<p id=p1> Sushi </p> </div>
 
-	<div id="box2" class="col-lg-4 col-md-6 col-sm-12"> Soup, everybody loves soup, throw in some noodles, bam, you've got ramen.<p id=p2> Ramen </p> </div>
+	<div id="box2" > Soup, everybody loves soup, throw in some noodles, bam, you've got ramen.<p id=p2> Ramen </p> </div>
 	 
-	<div id="box3" class="col-lg-4 col-md-12 col-sm-12"> Garlic bread, Chips, Desserts, you know the drill.<p id=p3> Sides </p> </div>
+	<div id="box3" > Garlic bread, Chips, Desserts, you know the drill.<p id=p3> Sides </p> </div>
  
 </div>
 
